fix: history overflow bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -110,6 +110,7 @@ body {
   bottom: -50vh;
   display: none;
   opacity: 0;
+  overflow: scroll;
   margin: 0;
   transition: bottom 1s ease-in-out, display 1s ease-in-out, opacity 1s ease-in-out;
   width: 100%;
